add readme; fix bug in twig template; update gitignore; remove unnecessary files

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}CoinWatch{% endblock %}</title>
-        <link rel="icon" href="http://localhost/coinwatch/public/img/favicon.png" type="image/gif">
-        <link type="text/css" rel="stylesheet" href="http://localhost/coinwatch/public/style/style.css">
+        <link rel="icon" href="/img/favicon.png" type="image/gif">
+        <link type="text/css" rel="stylesheet" href="/style/style.css">
         <link type="text/css" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
         
@@ -19,6 +19,6 @@
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="http://localhost/coinwatch/public/js/script.js"></script>
+        <script src="/js/script.js"></script>
     </body>
 </html>
